--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy":"https://mern-front-test.vercel.app/",
   "type": "module",
   "scripts": {
     "dev": "vite",
